--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
 
 .home-page-navbar {
     width: 100vw;
-    height: 70px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -89,12 +89,12 @@ body {
     text-align: justify;
 }
 
-.home-page-img {
+.home-page-img, .dashboard-body-img {
     height: 400px;
     width: 400px;
 }
 
-.home-img {
+.home-img, .dashboard-img {
     height: 100%;
     width: 100%;
     border-radius: 50%;
@@ -178,9 +178,40 @@ body {
 .navbar-profile-img {
     height: 40px;
     width: 40px;
+}
+
+.nav-prof-img {
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
-    background-color: #26a69a;
+}
+
+.dashboard-page-body {
+    width: 100vw;
+    height: calc(100vh - 60px);
+    padding: 100px 100px 0 100px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+}
+
+.dashboard-body-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 65%;
+}
+
+.dashboard-hey {
+    font-size: 2.5rem;
+    font-weight: 400;
+}
+
+.dashboard-username {
+    font-size: 5rem;
+    font-weight: 500;
+    margin-bottom: 50px;
+}
+
+.dashboard-hope, .dashboard-welcome {
+    font-size: 1.2rem;
 }
