--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,4 +1,94 @@
-.profile-container{
+.profile-container {
     display: grid;
     grid-template-columns: auto auto;
+}
+
+.profile-page-body {
+    width: 100vw;
+    height: calc(100vh - 60px);
+    padding: 50px 100px 0 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.profile-head {
+    font-size: 3rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.basic-info {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    margin-bottom: 30px;
+}
+
+.name-email-info {
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    justify-content: center;
+}
+
+.img-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 26%;
+}
+
+.profile-img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+}
+
+.edit-image {
+    margin-left: 0.8rem;
+    cursor: pointer;
+}
+
+.handles-info {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.left-handles, .right-handles {
+    display: flex;
+    width: 50%;
+    font-size: 1.5rem;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+}
+
+.handles {
+    display: flex;
+    width: 60%;
+    font-size: 1.5rem;
+    flex-direction: column;
+    gap: 15px;
+    padding: 2rem;
+}
+
+.codeforces-handle, .codechef-handle, .leetcode-handle, .spoj-handle, .atcoder-handle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.handle_name {
+    width: 30%;
+    float: left !important;
+}
+
+.handle_value {
+    width: 70%;
+    float: right !important;
 }
