--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -2,20 +2,44 @@
     height: 100vh;
 }
 
+.item1 {
+    grid-area: editor;
+}
+
+.item2 {
+    grid-area: input;
+}
+
+.item3 {
+    grid-area: output;
+}
+
 .editor-page-body {
     width: 100vw;
     height: calc(100vh - 60px);
     padding: 50px 100px 0 100px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
 }
 
 #editor {
     width: 44.8vw;
     margin: 0px 30px 30px 0;
     height: calc(100vh - 120px);
+}
+
+.container {
+    width: 100vw;
+    display: grid;
+    grid-template-areas: 'editor input' 'editor output';
+    grid-template-columns: 45% 30%;
+    grid-gap: 10px;
+    padding: 10px;
+}
+
+.button-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .select-options {
