--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -43,7 +43,7 @@
 
 .editor-cont {
     height: 100%;
-    background-color: #4A4B5C;
+    background-color: #000000;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -53,7 +53,7 @@
     width: 100%;
     min-height: 50px;
     max-height: 50px;
-    border-bottom: 1px solid #797676;
+    border-bottom: 1px solid #000000;
     display: flex;
     justify-content: space-between;
 }
@@ -157,7 +157,7 @@
 }
 
 .code-editor {
-    border-bottom: 1px solid #797676;
+    border-bottom: 1px solid #000000;
     height: calc(100% - (50px + 200px));
 }
 
@@ -180,24 +180,28 @@
 }
 
 .submit-area {
-    min-height: 30px;
-    max-height: 30px;
+    min-height: 32px;
+    max-height: 32px;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
-    border-bottom: 1px solid #797676;
+    justify-content: right;
+    border-bottom: 1px solid #000000;
     align-items: center;
 }
 
 .submit-code {
-    height: 25px;
-    width: 60px;
+    height: 28px;
+    width: 80px;
     font-size: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 20px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     border-radius: 5px;
+    color: black;
+    background-color: white;
 }
 
 .inp-out-area {
@@ -205,7 +209,16 @@
     width: 100%;
     min-height: 170px;
     max-height: 170px;
-    padding: 5px;
+    padding: 0 5px 5px;
+}
+
+textarea {
+    background-color: #ffffff;
+    color: black;
+}
+
+textarea:placeholder-shown {
+    font-family: 'Abril Fatface', cursive !important;
 }
 
 .input-area, .output-area {
@@ -223,7 +236,7 @@
 
 .inp-out-dot {
     height: 20%;
-    border: 3px dotted #797676;
+    border: 3px dotted #ffffff;
 }
 
 #input_box, #output_box {
@@ -232,6 +245,6 @@
     width: 100%;
     border-radius: 5px;
     padding: 2px;
-    color: white;
+    /* color: white; */
     font-size: 1rem;
 }
