--- a/public/css/stats.css
+++ b/public/css/stats.css
@@ -117,9 +117,9 @@ body {
     width: 100vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin: 50px 50px 0;
+    margin: 0 50px 0;
 }
 
 .identity-div {
@@ -174,7 +174,6 @@ body {
 }
 
 #myChart {
-    width: 100%;
+    width: 1000px;
     background-color: transparent;
-    color: black;
 }
