--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -180,8 +180,8 @@
 }
 
 .submit-area {
-    min-height: 32px;
-    max-height: 32px;
+    min-height: 30px;
+    max-height: 30px;
     width: 100%;
     display: flex;
     justify-content: right;
@@ -190,15 +190,15 @@
 }
 
 .submit-code {
-    height: 28px;
-    width: 80px;
+    height: 25px;
+    width: 60px;
     font-size: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 20px;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    /* margin-top: 2px;
+    margin-bottom: 2px; */
     border-radius: 5px;
     color: black;
     background-color: white;
@@ -209,7 +209,8 @@
     width: 100%;
     min-height: 170px;
     max-height: 170px;
-    padding: 0 5px 5px;
+    /* padding: 0 5px 5px; */
+    padding: 5px;
 }
 
 textarea {
@@ -247,4 +248,119 @@ textarea:placeholder-shown {
     padding: 2px;
     /* color: white; */
     font-size: 1rem;
+}
+
+.problem-selector {
+    width: 100%;
+    min-height: 50px;
+    max-height: 50px;
+    border-bottom: 1px solid #797676;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+}
+
+.problem-list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    overflow-x: auto;
+}
+
+.problem-chip {
+    display: flex;
+    border-radius: 10px;
+    height: 40px;
+    font-size: 1rem;
+    cursor: pointer;
+    background-color: #f2f2f2;
+    padding: 0 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.problem-chip:hover {
+    background-color: #413f3f;
+    color: white;
+}
+
+.problem-body {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    font-family: cursive;
+    width: 100%;
+    height: calc(100% - 50px);
+}
+
+.problem-head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0 30px 0;
+    width: 100%;
+}
+
+.problem-title {
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.problem-time, .problem-memory {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.problem-statement {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0 15px;
+    margin-bottom: 20px;
+}
+
+.problem-statement>ul>li {
+    padding-left: 20px;
+}
+
+.problem-statement>ul>li::before {
+    content: '';
+    display: inline-block;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    background-color: black;
+    margin-right: 5px;
+}
+
+.problem-input, .problem-output, .problem-sample, .problem-note {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 0 15px;
+    margin-bottom: 15px;
+}
+
+.problem-input-head, .problem-output-head, .problem-sample-head, .problem-note-head {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.problem-table {
+    border: 1px solid;
+}
+
+.table-input {
+    border-bottom: 1px solid;
+    font-size: 1.1rem;
+}
+
+.table-output {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    font-size: 1.1rem;
 }
