--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -287,7 +287,7 @@ textarea:placeholder-shown {
     color: white;
 }
 
-.problem-body {
+.problem-body1, .problem-body2, .problem-body3 {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -363,4 +363,9 @@ textarea:placeholder-shown {
     border-top: 1px solid;
     border-bottom: 1px solid;
     font-size: 1.1rem;
+}
+
+
+.hidden {
+    display: none;
 }
