--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -173,6 +173,32 @@ body {
     flex-direction: column;
 }
 
+.check-console {
+    width: 100%;
+    min-height: 200px;
+    max-height: 200px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    padding: 10px 15px;
+    font-family: 'Gideon Roman', cursive;
+    color: white;
+}
+
+.pre-verdict, .submit-confirm {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.verdict-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
 .code-area {
     height: 100%;
     width: 100%;
@@ -188,21 +214,31 @@ body {
     max-height: 30px;
     width: 100%;
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     border-bottom: 1px solid #000000;
     align-items: center;
+    padding: 0 10px;
 }
 
-.submit-code {
+.run-code {
     height: 25px;
     width: 60px;
     font-size: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 20px;
-    /* margin-top: 2px;
-    margin-bottom: 2px; */
+    border-radius: 5px;
+    color: black;
+    background-color: white;
+}
+
+.check-code, .cancel-code, .submit-code {
+    height: 25px;
+    width: 80px;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px;
     color: black;
     background-color: white;
