--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,6 +244,14 @@ input, input:active, input:placeholder-shown {
     font-size: 1.2rem;
 }
 
+.input-field {
+    margin: 0 !important;
+}
+
+input[type=number]:focus {
+    border-bottom: 1px solid black !important;
+}
+
 .practice-page-body {
     width: 100vw;
     height: calc(100vh - 60px);
@@ -277,8 +285,26 @@ input, input:active, input:placeholder-shown {
     align-items: center;
 }
 
+.practice-tags {
+    margin-bottom: 2rem;
+}
+
+.practice-submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 .get-prob-but {
-    font-size: 1.5rem;
+    width: 23%;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    text-transform: none;
+    font-size: 1.7rem;
+    color: rgb(255, 255, 255);
+    font-family: 'Abril Fatface', cursive !important;
+    margin-bottom: 2rem;
 }
 
 .practice-list {
@@ -292,7 +318,7 @@ input, input:active, input:placeholder-shown {
 .practice-card {
     display: flex;
     width: 50%;
-    background-color: #4A4B5C;
+    background-color: #000000;
     color: white;
     height: 100px;
     margin-bottom: 20px;
@@ -300,4 +326,15 @@ input, input:active, input:placeholder-shown {
     font-size: 1.5rem;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
+}
+
+.practice-card:hover {
+    background-color: #353535;
+}
+
+.toast-class {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
 }
