--- a/public/css/style.css
+++ b/public/css/style.css
@@ -297,7 +297,8 @@ input[type=number]:focus {
 }
 
 .get-prob-but {
-    width: 23%;
+    width: 21%;
+    height: 100%;
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
     text-transform: none;
@@ -309,24 +310,30 @@ input[type=number]:focus {
 
 .practice-list {
     width: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 30px;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    /* padding-bottom: 100px; */
 }
 
 .practice-card {
     display: flex;
-    width: 50%;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
     background-color: #000000;
     color: white;
-    height: 100px;
+    height: 90%;
     margin-bottom: 20px;
     cursor: pointer;
     font-size: 1.5rem;
-    align-items: center;
-    justify-content: center;
     border-radius: 10px;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .practice-card:hover {
