final work done

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -409,3 +409,10 @@ textarea:placeholder-shown {
 .hidden {
     display: none;
 }
+
+#toast-container {
+    top: auto !important;
+    right: auto !important;
+    bottom: 10%;
+    left:7%;
+  }
