--- a/public/css/submission.css
+++ b/public/css/submission.css
@@ -42,7 +42,7 @@
     height: 100%;
     border-radius: 15px;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     flex-direction: column;
     padding: 10px;
